Modify upstream schema and add it to API
